--- a/class9.css
+++ b/class9.css
@@ -121,5 +121,15 @@ h3, h1{
     margin-left: 10px;
 }
 
+#services, #register, #contact, #about{
+    text-align: center;
+    size: 30px;
+    
+}
+h4{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    font-size: 35px;
+    color: tomato;
 
         
